Fix card grid overlap

--- a/term1/WilliamRobertson_T1A2/src/scss/_components.scss
+++ b/term1/WilliamRobertson_T1A2/src/scss/_components.scss
@@ -114,7 +114,7 @@
 .card-grid {
   display: grid;
   justify-items: center;
-  gap: 1rem;
+  gap: 50px;
   align-items: start;
   grid-template-rows: 300px;
   grid-template-columns: 300px;
